--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,25 @@
+# Local .terraform directories
+**/.terraform/*
 
-# Private/Secret files
-.env
-.env.*
-*.secret
-*.key
-credentials.json
-google-services.json
-service-account.json
-secrets.py
-api_keys.py
-config_private.py
+# .tfstate files
+*.tfstate
+*.tfstate.*
 
-# Build/OS
-__pycache__/
-*.pyc
-node_modules/
-.DS_Store
-*.log
-venv/
-.venv/
-dist/
-build/
-*.spec
-*.db
-*.sqlite3
+# Crash log files
+crash.log
+
+# Exclude override files
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Include override files you do wish to add to git
+# !override.tf
+
+# Include variables files
+*.tfvars
+*.tfvars.json
+
+# Ignore generated plans
+*.tfplan
